--- a/month1/hw_3_fashionmnist_mlp.ipynb
+++ b/month1/hw_3_fashionmnist_mlp.ipynb
@@ -181,6 +181,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Правильная проверка\n",
+    "# Свойство dataset в генераторе train_loader содержит исходный датасет,\n",
+    "# список transforms применяется к данным позже на этапе формирования батчей\n",
+    "# В этом и состоит основное преимущество генератора, \n",
+    "# поскольку независимо от размера датасета \n",
+    "# мы получаем порцию данных за фиксированное время.\n",
+    "# Это также позволяет использовать в transforms довольно затратные операции, \n",
+    "# например, аугментацию данных, зашумление, удаление шума и т.д.\n",
+    "def check_normalization(loader, train=True):\n",
+    "    batch_mean = []\n",
+    "    batch_std  = []\n",
+    "    for batch_idx, (data, target) in enumerate(loader):\n",
+    "        batch_mean.append(data.float().mean())\n",
+    "        batch_std .append(data.float().std())\n",
+    "\n",
+    "    str_train = \"Train\" if train else \"Test\"\n",
+    "    print(\"{} mean: {}, std: {}\".format(\n",
+    "            str_train,\n",
+    "            np.array(batch_mean).mean(),\n",
+    "            np.array(batch_std).mean())\n",
+    "         )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train mean: -8.940697071579962e-09, std: 0.9983019828796387\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_normalization(train_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test mean: 0.0022907222155481577, std: 0.9964433908462524\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_normalization(test_loader, train=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
