Added files for hw_1. Fixed bug model.eval() in hw_3

--- a/month1/hw_1_intro.ipynb
+++ b/month1/hw_1_intro.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "'e36aaa4e1429381b'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,14 +69,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Processing...\n",
-      "Done!\n",
-      "0.1306604762738429\n",
-      "0.30810780717887876\n"
+      "tensor(0.1307)\n",
+      "tensor(0.3081)\n"
      ]
     }
    ],
@@ -93,19 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "normalize_transform = transforms.Compose([\n",
     "                transforms.ToTensor(),\n",
-    "                transforms.Normalize((0,), (1,)),\n",
+    "                transforms.Normalize((train_mean,), (train_std,)),\n",
     "           ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1306604762738429"
+       "tensor(0.1307)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +249,7 @@
        "          -0.4241, -0.4241, -0.4241, -0.4241, -0.4241, -0.4241, -0.4241]]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
