--- a/month1/hw_5/rnn-refactored.ipynb
+++ b/month1/hw_5/rnn-refactored.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### HW 5. Character-level model "
+    "### HW 5. Character-level RNN model generating texts"
    ]
   },
   {
